force-app/main/default/objects/Account/fields/Sample1__c.field-meta.xml
<CustomField>
    <fullName>Sample1__c</fullName>
    <label>Sample1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>