force-app/main/default/objects/Account/fields/Sample2__c.field-meta.xml
<CustomField>
    <fullName>Sample2__c</fullName>
    <label>Sample2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>