force-app/main/default/objects/Account/fields/Sample_Field__c.field-meta.xml
<CustomField>
    <fullName>Sample_Field__c</fullName>
    <label>Sample Field</label>
    <length>12</length>
    <type>Text</type>
</CustomField>